Arreglados bugs encontrados a la hora de agregar nuevos registros.